
syntax = "proto3";

option go_package = "google.golang.org/grpc/examples/route_guide/routeguide";
option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";

package protocol;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  // 入口函数定义处
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SayTian (HelloRequestTian) returns (HelloReplyTian) {}
}

service RouteGuide {

  //简单Rpc
  rpc GetFeature(Point) returns(Feature){}

}

message Point {
  int32 latiude = 1;
  int32 longitude = 2;
}

message Feature {
  string name = 1;
  Point location = 2;
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

// 输入对象定义处
// The request message containing the user's name.
message HelloRequestTian {
  string name = 1;
  string SayMsg = 2;
}

// 返回对象定义处
// The response message containing the greetings
message HelloReplyTian {
  string message = 1;
  string name = 2;
}


